--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@color/blue"
+    android:orientation="vertical"
+    android:id="@+id/main" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginHorizontal="@dimen/low_margin"
+        android:layout_marginVertical="@dimen/low_margin"
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="22sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/horizontal_margin"
+        android:layout_marginTop="@dimen/low_margin"
+        android:layout_weight="1"
+        android:backgroundTint="@color/white"
+        android:text="@string/search_title"
+        android:textColor="@color/black"
+        app:cornerRadius="@dimen/button_corner"
+        app:icon="@drawable/light_mode"
+        app:iconGravity="textStart"
+        app:iconPadding="@dimen/icon_pudding"
+        app:iconTint="@color/black" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/horizontal_margin"
+        android:layout_marginTop="@dimen/low_margin"
+        android:layout_weight="1"
+        android:backgroundTint="@color/white"
+        android:text="@string/media_library"
+        android:textColor="@color/black"
+        app:cornerRadius="@dimen/button_corner"
+        app:icon="@drawable/media"
+        app:iconGravity="textStart"
+        app:iconPadding="@dimen/icon_pudding"
+        app:iconTint="@color/black" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/horizontal_margin"
+        android:layout_marginVertical="@dimen/low_margin"
+        android:layout_weight="1"
+        android:backgroundTint="@color/white"
+        android:text="@string/settings"
+        android:textColor="@color/black"
+        app:cornerRadius="@dimen/button_corner"
+        app:icon="@drawable/settings_icon"
+        app:iconGravity="textStart"
+        app:iconPadding="@dimen/icon_pudding"
+        app:iconTint="@color/black" />
+
+</LinearLayout>
