--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:layout_marginVertical="@dimen/low_margin"
         android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        android:fontFamily="@font/ys_display_medium"/>
 
     <Button
         android:layout_width="match_parent"
@@ -24,12 +25,15 @@
         android:layout_weight="1"
         android:backgroundTint="@color/white"
         android:text="@string/search_title"
+        android:textSize="@dimen/avrg_text_size"
         android:textColor="@color/black"
         app:cornerRadius="@dimen/button_corner"
         app:icon="@drawable/light_mode"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_pudding"
-        app:iconTint="@color/black" />
+        app:iconTint="@color/black"
+        android:fontFamily="@font/ys_display_medium"
+        android:textAllCaps="false"/>
 
     <Button
         android:layout_width="match_parent"
@@ -39,12 +43,15 @@
         android:layout_weight="1"
         android:backgroundTint="@color/white"
         android:text="@string/media_library"
+        android:textSize="@dimen/avrg_text_size"
         android:textColor="@color/black"
         app:cornerRadius="@dimen/button_corner"
         app:icon="@drawable/media"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_pudding"
-        app:iconTint="@color/black" />
+        app:iconTint="@color/black"
+        android:fontFamily="@font/ys_display_medium"
+        android:textAllCaps="false"/>
 
     <Button
         android:layout_width="match_parent"
@@ -54,11 +61,14 @@
         android:layout_weight="1"
         android:backgroundTint="@color/white"
         android:text="@string/settings"
+        android:textSize="@dimen/avrg_text_size"
         android:textColor="@color/black"
         app:cornerRadius="@dimen/button_corner"
         app:icon="@drawable/settings_icon"
         app:iconGravity="textStart"
         app:iconPadding="@dimen/icon_pudding"
-        app:iconTint="@color/black" />
+        app:iconTint="@color/black"
+        android:fontFamily="@font/ys_display_medium"
+        android:textAllCaps="false"/>
 
 </LinearLayout>
