--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:backgroundTint="@color/white"
+        android:text="@string/settings"
+        android:fontFamily="@font/ys_display_medium"
+        android:textColor="@color/black"
+        android:textAlignment="textStart"
+        android:textSize="@dimen/avrg_text_size"
+        android:textAllCaps="false"
+        app:icon = "@drawable/arrowback"
+        app:iconTint = "@color/black"
+        app:iconPadding = "@dimen/low_margin"
+        android:layout_marginBottom="20dp"
+        />
+        <Switch
+            android:layout_width="match_parent"
+            android:layout_height="61dp"
+            android:backgroundTint="@color/black"
+            android:text="Темная тема"
+            android:fontFamily="@font/ys_display_medium"
+            android:textAllCaps="false"
+            android:paddingLeft="16dp"
+            android:textSize="@dimen/low_text_size"
+            />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
