--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="horizontal_margin">12dp</dimen>
-    <dimen name="low_margin">12dp</dimen>
+    <dimen name="horizontal_margin">14dp</dimen>
+    <dimen name="low_margin">14dp</dimen>
     <dimen name="button_corner">20dp</dimen>
     <dimen name="icon_pudding">8dp</dimen>
+    <dimen name="avrg_text_size">22sp</dimen>
+    <dimen name="button_height">61dp</dimen>
+    <dimen name="low_text_size">16sp</dimen>
 </resources>
