--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -22,12 +22,56 @@
         <Switch
             android:layout_width="match_parent"
             android:layout_height="61dp"
-            android:backgroundTint="@color/black"
-            android:text="Темная тема"
+            android:text="@string/dark_theme"
             android:fontFamily="@font/ys_display_medium"
             android:textAllCaps="false"
-            android:paddingLeft="16dp"
+            android:paddingLeft="@dimen/button_pudding_setting"
             android:textSize="@dimen/low_text_size"
             />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:backgroundTint="@color/white"
+        android:text="@string/sharing"
+        android:fontFamily="@font/ys_display_medium"
+        android:textAllCaps="false"
+        android:paddingLeft="@dimen/button_pudding_setting"
+        android:textSize="@dimen/low_text_size"
+        android:textColor="@color/black"
+        android:textAlignment="textStart"
+        app:icon = "@drawable/share"
+        app:iconTint = "@color/gray"
+        app:iconGravity= "end"
+        android:paddingRight="@dimen/icon_right_pudding"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:backgroundTint="@color/white"
+        android:text="@string/support"
+        android:fontFamily="@font/ys_display_medium"
+        android:textAllCaps="false"
+        android:paddingLeft="@dimen/button_pudding_setting"
+        android:textSize="@dimen/low_text_size"
+        android:textColor="@color/black"
+        android:textAlignment="textStart"
+        app:icon = "@drawable/group"
+        app:iconTint = "@color/gray"
+        app:iconGravity= "end"
+        android:paddingRight="@dimen/icon_right_pudding"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:backgroundTint="@color/white"
+        android:text="@string/user_agreement"
+        android:fontFamily="@font/ys_display_medium"
+        android:textAllCaps="false"
+        android:paddingLeft="@dimen/button_pudding_setting"
+        android:textSize="@dimen/low_text_size"
+        android:textColor="@color/black"
+        android:textAlignment="textStart"
+        app:icon = "@drawable/arrow"
+        app:iconTint = "@color/gray"
+        app:iconGravity= "end"
+        android:paddingRight="@dimen/icon_right_pudding"/>
 
 </LinearLayout>
