--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="avrg_text_size">22sp</dimen>
     <dimen name="button_height">61dp</dimen>
     <dimen name="low_text_size">16sp</dimen>
+    <dimen name="button_pudding_setting">16dp</dimen>
+    <dimen name="icon_right_pudding">13dp</dimen>
 </resources>
