--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/settings" >
     <Button
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
@@ -18,7 +19,7 @@
         app:iconTint = "@color/black"
         app:iconPadding = "@dimen/low_margin"
         android:layout_marginBottom="20dp"
-        />
+        android:id="@+id/home"/>
         <Switch
             android:layout_width="match_parent"
             android:layout_height="61dp"
