--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginVertical="@dimen/low_margin"
         android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="22sp"
+        android:textSize="@dimen/avrg_text_size"
         android:fontFamily="@font/ys_display_medium"
         />
 
