--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,60 +19,22 @@
         />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/horizontal_margin"
-        android:layout_marginTop="@dimen/low_margin"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
+        style="@style/button_main_activity"
         android:text="@string/search_title"
-        android:textSize="@dimen/avrg_text_size"
-        android:textColor="@color/black"
-        app:cornerRadius="@dimen/button_corner"
         app:icon="@drawable/light_mode"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_pudding"
-        app:iconTint="@color/black"
-        android:fontFamily="@font/ys_display_medium"
-        android:textAllCaps="false"
         android:id="@+id/search"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/horizontal_margin"
-        android:layout_marginTop="@dimen/low_margin"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
+        style="@style/button_main_activity"
         android:text="@string/media_library"
-        android:textSize="@dimen/avrg_text_size"
-        android:textColor="@color/black"
-        app:cornerRadius="@dimen/button_corner"
         app:icon="@drawable/media"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_pudding"
-        app:iconTint="@color/black"
-        android:fontFamily="@font/ys_display_medium"
-        android:textAllCaps="false"
         android:id="@+id/media"/>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/horizontal_margin"
-        android:layout_marginVertical="@dimen/low_margin"
-        android:layout_weight="1"
-        android:backgroundTint="@color/white"
+        style="@style/button_main_activity"
         android:text="@string/settings"
-        android:textSize="@dimen/avrg_text_size"
-        android:textColor="@color/black"
-        app:cornerRadius="@dimen/button_corner"
         app:icon="@drawable/settings_icon"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_pudding"
-        app:iconTint="@color/black"
-        android:fontFamily="@font/ys_display_medium"
-        android:textAllCaps="false"
+        android:layout_marginBottom="@dimen/low_margin"
         android:id="@+id/settings"/>
 
 </LinearLayout>
