--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,79 +3,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:theme="@style/Base.Theme.PlaylistMaker"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/settings" >
+    android:id="@+id/settings"
+    android:background="#1A1B22">
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height"
-        android:backgroundTint="@color/white"
+        style = "@style/button_settings_activity"
+
+        app:iconGravity = "textStart"
         android:text="@string/settings"
         android:fontFamily="@font/ys_display_medium"
-        android:textColor="@color/black"
-        android:textAlignment="textStart"
         android:textSize="@dimen/avrg_text_size"
-        android:textAllCaps="false"
         app:icon = "@drawable/arrowback"
-        app:iconTint = "@color/black"
         app:iconPadding = "@dimen/low_margin"
         android:layout_marginBottom="20dp"
-        android:id="@+id/home"/>
+        android:id="@+id/home"
+        />
         <Switch
-            android:layout_width="match_parent"
-            android:layout_height="61dp"
             android:text="@string/dark_theme"
-            android:fontFamily="@font/ys_display_medium"
-            android:textAllCaps="false"
-            android:paddingLeft="@dimen/button_pudding_setting"
-            android:textSize="@dimen/low_text_size"
+            style="@style/button_settings_activity"
+            android:paddingRight="6dp"
             />
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height"
-        android:backgroundTint="@color/white"
+        style="@style/button_settings_activity"
         android:text="@string/sharing"
-        android:fontFamily="@font/ys_display_medium"
-        android:textAllCaps="false"
-        android:paddingLeft="@dimen/button_pudding_setting"
-        android:textSize="@dimen/low_text_size"
-        android:textColor="@color/black"
-        android:textAlignment="textStart"
-        app:icon = "@drawable/share"
-        app:iconTint = "@color/gray"
-        app:iconGravity= "end"
-        android:paddingRight="@dimen/icon_right_pudding"
-        android:background="@android:color/transparent"/>
+        app:icon = "@drawable/share"/>
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height"
-        android:backgroundTint="@color/white"
+       style="@style/button_settings_activity"
         android:text="@string/support"
-        android:fontFamily="@font/ys_display_medium"
-        android:textAllCaps="false"
-        android:paddingLeft="@dimen/button_pudding_setting"
-        android:textSize="@dimen/low_text_size"
-        android:textColor="@color/black"
-        android:textAlignment="textStart"
-        app:icon = "@drawable/group"
-        app:iconTint = "@color/gray"
-        app:iconGravity= "end"
-        android:paddingRight="@dimen/icon_right_pudding"
-        android:background="@android:color/transparent"/>
+        app:icon = "@drawable/group"/>
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height"
-        android:backgroundTint="@color/white"
         android:text="@string/user_agreement"
-        android:fontFamily="@font/ys_display_medium"
-        android:textAllCaps="false"
-        android:paddingLeft="@dimen/button_pudding_setting"
-        android:textSize="@dimen/low_text_size"
-        android:textColor="@color/black"
-        android:textAlignment="textStart"
         app:icon = "@drawable/arrow"
-        app:iconTint = "@color/gray"
-        app:iconGravity= "end"
-        android:paddingRight="@dimen/icon_right_pudding"
-        android:background="@android:color/transparent"/>
+        style="@style/button_settings_activity"/>
 
 </LinearLayout>
