--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -7,8 +7,8 @@
         <item name="android:layout_marginHorizontal">@dimen/horizontal_margin </item>
         <item name="android:layout_marginTop">@dimen/low_margin </item>
         <item name="android:layout_weight">1 </item>
-        <item name="android:backgroundTint">@color/white </item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/white </item>
         <item name="android:textSize">@dimen/avrg_text_size </item>
         <item name="cornerRadius">@dimen/button_corner </item>
         <item name="iconGravity">textStart </item>
@@ -22,14 +22,14 @@
 
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/button_height</item>
-        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:backgroundTint">?attr/colorPrimary</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:paddingLeft">@dimen/button_pudding_setting</item>
         <item name="android:textSize">@dimen/low_text_size</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textAlignment">textStart</item>
-        <item name="iconTint">@color/gray</item>
+        <item name="iconTint">@color/white</item>
         <item name="iconGravity">end</item>
         <item name="android:paddingRight">@dimen/icon_right_pudding</item>
     </style>
