--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight">
-        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorOnPrimary">@color/black</item><!-- Установите фон -->
     </style>
 </resources>
