--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,6 +5,52 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    tools:context=".SearchActivity"
+    android:theme="@style/Base.Theme.PlaylistMaker">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="?attr/colorPrimary">
+        <Button
+        style = "@style/top_button"
+        app:iconGravity = "textStart"
+        android:text="@string/search_title"
+        android:fontFamily="@font/ys_display_medium"
+        android:textSize="@dimen/avrg_text_size"
+        app:icon = "@drawable/arrowback"
+        app:iconPadding = "@dimen/low_margin"
+        android:layout_marginBottom="0dp"
+        android:id="@+id/home"
+        android:layout_height="56dp"
+        app:iconTint="@color/black"
+        />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginHorizontal="@dimen/margin_horizontal_activity"
+            android:layout_marginVertical="@dimen/margin_vertical_activity"
+            app:cardCornerRadius="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/mist_gray"
+            android:orientation="horizontal"
+            android:padding="0dp"
+            >
+            <EditText
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                style="@style/search"
+                android:id="@+id/search"
+                />
+            <Button
+                style="@style/cross_button"
+                android:id="@+id/cross"
+                android:visibility="gone"
+                />
+    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
