--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@
     android:id="@+id/settings"
     android:background="?attr/colorPrimary">
     <Button
-        style = "@style/button_settings_activity"
+        style = "@style/top_button"
 
         app:iconGravity = "textStart"
         android:text="@string/settings"
@@ -21,23 +21,23 @@
         />
         <Switch
             android:text="@string/dark_theme"
-            style="@style/button_settings_activity"
+            style="@style/top_button"
             android:paddingRight="6dp"
             />
     <Button
-        style="@style/button_settings_activity"
+        style="@style/top_button"
         android:text="@string/sharing"
         app:icon = "@drawable/share"
         android:id="@+id/buttonShare"/>
     <Button
-       style="@style/button_settings_activity"
+       style="@style/top_button"
         android:text="@string/support"
         app:icon = "@drawable/group"
         android:id="@+id/support"/>
     <Button
         android:text="@string/user_agreement"
         app:icon = "@drawable/arrow"
-        style="@style/button_settings_activity"
+        style="@style/top_button"
         android:id="@+id/userAgreement"/>
 
 </LinearLayout>
