--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,20 +24,45 @@
         <item name="android:fontFamily">@font/ys_display_medium </item>
         <item name="android:textAllCaps">false </item>
     </style>
-    <style name="button_settings_activity"
+    <style name="top_button"
         parent="Widget.MaterialComponents.Button.UnelevatedButton">
-
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/button_height</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:paddingLeft">@dimen/button_pudding_setting</item>
+        <item name="android:paddingLeft">@dimen/padding_activity</item>
         <item name="android:textSize">@dimen/low_text_size</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textAlignment">textStart</item>
         <item name="iconTint">@color/gray</item>
         <item name="iconGravity">end</item>
         <item name="android:paddingRight">@dimen/icon_right_pudding</item>
+    </style>
+    <style name="search">
+        <item name="android:layout_height">40dp</item>
+        <item name="android:inputType">text</item>
+        <item name="android:hint">@string/search_title</item>
+        <item name="android:textColorHint">@color/text_gray</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:background">@color/mist_gray</item>
+        <item name="android:drawableStart">@drawable/light_mode</item>
+        <item name="android:drawableTint">@color/text_gray</item>
+        <item name="android:drawablePadding">8dp</item>
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingEnd">8dp</item>
+    </style>
+    <style
+        name="cross_button"
+        parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="icon">@drawable/x</item>
+        <item name="iconSize">16dp</item>
+        <item name="iconTint">@color/text_gray</item>
+        <item name="android:paddingHorizontal">12dp</item>
+        <item name="android:paddingVertical">10dp</item>
+        <item name="android:backgroundTint">@color/mist_gray</item>
+        <item name="android:layout_margin">0dp</item>
     </style>
 </resources>
