--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -39,9 +39,11 @@
         <item name="iconTint">@color/white</item>
         <item name="iconGravity">end</item>
         <item name="android:paddingRight">@dimen/icon_right_pudding</item>
+        <item name="android:thumbTint">@color/blue</item>
+        <item name="android:trackTint">@color/blue</item>
     </style>
     <style name="search">
-        <item name="android:layout_height">52dp</item>
+        <item name="android:layout_height">40dp</item>
         <item name="android:inputType">text</item>
         <item name="android:hint">@string/search_title</item>
         <item name="android:textColorHint">@color/black</item>
@@ -52,7 +54,7 @@
         <item name="android:drawablePadding">8dp</item>
         <item name="android:paddingStart">12dp</item>
         <item name="android:paddingEnd">8dp</item>
-    </style>
+          </style>
 
     <style
         name="cross_button"
