--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -43,6 +43,7 @@
         <item name="android:trackTint">@color/blue</item>
     </style>
     <style name="search">
+        <item name="android:textColor">@color/black</item>
         <item name="android:layout_height">40dp</item>
         <item name="android:inputType">text</item>
         <item name="android:hint">@string/search_title</item>
