--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -70,4 +70,17 @@
         <item name="android:backgroundTint">@color/mist_gray</item>
         <item name="android:layout_margin">0dp</item>
     </style>
+    <style name="track_text">
+        <item name="maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/ys_display_regular</item>
+    </style>
+    <style name="track_text_small"
+        parent ="track_text">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="iconColor">
+        <item name="tint">@color/white</item>
+    </style>
 </resources>
