--- a/app/src/main/res/layout/track.xml
+++ b/app/src/main/res/layout/track.xml
@@ -4,7 +4,7 @@
         android:layout_height="61dp"
         android:orientation="horizontal"
         android:paddingHorizontal="12dp"
-        android:paddingVertical="8dp"
+        android:paddingVertical="@dimen/margin_vertical_activity"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     >
@@ -24,27 +24,27 @@
                 style = "@style/track_text"
                 android:layout_width="wrap_content"
                 android:layout_height="19dp"
-                android:layout_marginLeft="8dp"
-                tools:text="Yesterday (Remastered 2009)"
-                android:textSize="16sp"/>
+                android:layout_marginLeft="@dimen/margin_vertical_activity"
+                tools:text="@string/track_name"
+                android:textSize="@dimen/low_text_size"/>
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="13dp"
+                android:layout_height="@dimen/track_author_line"
                 android:orientation="horizontal"
                 android:layout_marginTop="1dp">
                 <TextView
                     android:id="@+id/artistName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="@dimen/margin_vertical_activity"
                     style="@style/track_text_small"
-                    tools:text="sdfgh"
-                    android:textSize="11dp"/>
+                    android:text="@string/track_author"
+                    android:textSize="@dimen/low_low_text_size"/>
                 <ImageView
                     style="@style/iconColor"
                     android:backgroundTint="@color/white"
-                    android:layout_width="13dp"
-                    android:layout_height="13dp"
+                    android:layout_width="@dimen/track_author_line"
+                    android:layout_height="@dimen/track_author_line"
                     android:src="@drawable/crop"
                     android:layout_gravity="center"
                     />
@@ -52,15 +52,15 @@
                     android:id="@+id/trackTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="11dp"
+                    android:textSize="@dimen/low_text_size"
                     style="@style/track_text_small"
-                    tools:text="sdfgh"/>
+                    tools:text="@string/track_duratin"/>
             </LinearLayout>
         </LinearLayout>
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/arrow"
+            android:src="@drawable/arrowforward"
             android:layout_gravity="center"
             style ="@style/iconColor"
             />
