--- a/app/src/main/res/layout/track.xml
+++ b/app/src/main/res/layout/track.xml
@@ -52,7 +52,7 @@
                     android:id="@+id/trackTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/low_text_size"
+                    android:textSize="@dimen/low_low_text_size"
                     style="@style/track_text_small"
                     tools:text="@string/track_duratin"/>
             </LinearLayout>
