--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,6 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".SearchActivity"
     android:theme="@style/Base.Theme.PlaylistMaker">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -42,7 +45,8 @@
                 android:layout_width="match_parent"
                 style="@style/search"
                 android:id="@+id/search"
-
+                android:imeOptions="actionDone"
+                android:singleLine="true"
                 />
             <Button
                 style="@style/cross_button"
@@ -52,10 +56,66 @@
                 />
     </FrameLayout>
     </androidx.cardview.widget.CardView>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
     </LinearLayout>
+        <LinearLayout
+            android:id="@+id/trouble_connection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="210dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            style="@style/place_holder_search_5xx"
+            android:layout_gravity="center_horizontal"
+            />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="312dp"
+            android:layout_height="88dp"
+            android:layout_gravity="center_horizontal">
+        <TextView
+            style="@style/text_error_search"
+            android:text="@string/connection_trouble"
+            android:layout_gravity="center_horizontal"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal|bottom"
+            style="@style/text_error_search"
+            android:text="@string/try_connection"/>
+        </LinearLayout>
+            <Button
+                android:id="@+id/update"
+                style="@style/update_button"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/not_found"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="210dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                style="@style/place_holder_search_not_found"
+                android:layout_gravity="center_horizontal"
+                />
+            <TextView
+                    style="@style/text_error_search"
+                    android:text="@string/not_found"
+                    android:layout_gravity="center_horizontal"/>
+            </LinearLayout>
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
