--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,4 +78,31 @@
     <style name="iconColor">
         <item name="tint">@color/gray</item>
     </style>
+    <style name="place_holder_search_5xx">
+        <item name="android:src">@drawable/_xx</item>
+    </style>
+    <style name="place_holder_search_not_found">
+        <item name="android:src">@drawable/not_found</item>
+    </style>
+    <style name="text_error_search">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="update_button"
+        parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:layout_width">91dp</item>
+        <item name="android:layout_height">36dp</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="cornerRadius">54dp</item>
+        <item name="android:text">@string/update</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+    </style>
 </resources>
