--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -26,7 +26,6 @@
     </style>
     <style name="top_button"
         parent="Widget.MaterialComponents.Button.UnelevatedButton">
-
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/button_height</item>
         <item name="android:backgroundTint">?attr/colorPrimary</item>
@@ -39,8 +38,8 @@
         <item name="iconTint">@color/white</item>
         <item name="iconGravity">end</item>
         <item name="android:paddingRight">@dimen/icon_right_pudding</item>
-        <item name="android:thumbTint">@color/blue</item>
-        <item name="android:trackTint">@color/blue</item>
+        <item name="thumbTint">@color/blue</item>
+        <item name="trackTint">#9FBBF3</item>
     </style>
     <style name="search">
         <item name="android:textColor">@color/black</item>
