--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -78,12 +78,14 @@
             android:layout_weight="1"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
         <Button
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
             android:letterSpacing="0"
             android:padding="0dp"
             android:visibility="visible"
             android:id="@+id/clear_history"
             android:layout_width="148dp"
-            android:layout_height="48dp"
+            android:layout_height="36dp"
             style ="@style/update_button"
             android:text="@string/clear_history"
             android:layout_marginBottom="20dp"/>
